update landing page

--- a/index.html
+++ b/index.html
@@ -120,20 +120,26 @@
 
     </section><!-- /About Section -->
 
-    <!-- Stats Section -->
     <section id="stats" class="stats section">
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <div class="row justify-content-center text-center">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="col-lg-3 col-md-6">
+        <i class="bi bi-people fs-2 mb-2"></i>
+        <div class="stats-item">
+          <span data-purecounter-start="0" 
+                data-purecounter-end="17" 
+                data-purecounter-duration="1" 
+                class="purecounter fs-4">
+          </span>
+          <p class="mb-0">Team Workers</p>
+        </div>
+      </div>
 
-        <div class="row gy-4">
+    </div>
+  </div>
+</section>
 
-        <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
-            <i class="bi bi-people"></i>
-            <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="17" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Team Workers</p>
-            </div>
-          </div><!-- End Stats Item -->
 
         </div>
 
@@ -233,9 +239,8 @@
             <div class="resume-item">
               <h4>IAIN SGD BANDUNG</h4>
               <h5>2002 - 2006</h5>
-              <p><em>Bandung</em></p>
               <ul>
-                <li>Fakultas </li>
+                <li>Fakultas SYARI'AH JURUSAN/PRODI AHWAL AL SYAKHSIYYAH</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -253,7 +258,6 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -268,7 +272,7 @@
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-  <!-- App 1 -->
+  <!-- Wife -->
   <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
     <img src="assets/img/masonry-portfolio/14.png" class="img-fluid" alt="App 1">
 
@@ -283,7 +287,7 @@
     </div>
   </div><!-- End Portfolio Item -->
 
-  <!-- Product -->
+  <!-- Public Speaking -->
   <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
     <img src="assets/img/masonry-portfolio/1.jpg" class="img-fluid" alt="Produk Unggulan">
 
@@ -298,7 +302,7 @@
     </div>
   </div><!-- End Portfolio Item -->
 
-  <!-- Branding -->
+  <!-- Random -->
   <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
     <img src="assets/img/masonry-portfolio/11.png" class="img-fluid" alt="Branding">
 
@@ -331,7 +335,6 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -347,9 +350,9 @@
                 <i class="bi bi-activity"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>Nesciunt Mete</h3>
+                <h3>Memimpin</h3>
               </a>
-              <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+              <p>Saya memimpin dan mengarahkan seluruh warga sekolah untuk bekerja secara kolaboratif, profesional, dan berorientasi pada peningkatan mutu pendidikan.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -362,9 +365,9 @@
                 <i class="bi bi-broadcast"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>Eosle Commodi</h3>
+                <h3>Merencanakan</h3>
               </a>
-              <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
+              <p>Saya menyusun visi, misi, serta program strategis sekolah guna memastikan arah pengembangan yang jelas dan berkelanjutan.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -377,9 +380,9 @@
                 <i class="bi bi-easel"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>Ledo Markt</h3>
+                <h3>Mengelola</h3>
               </a>
-              <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
+              <p>Saya mengelola sumber daya manusia, sarana prasarana, serta administrasi sekolah secara efektif dan transparan.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -392,9 +395,9 @@
                 <i class="bi bi-bounding-box-circles"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>Asperiores Commodit</h3>
+                <h3>Mengembangkan</h3>
               </a>
-              <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
+              <p>Saya mendorong inovasi pembelajaran, pemanfaatan teknologi, serta peningkatan kompetensi guru dan tenaga kependidikan.</p>
               <a href="#" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
@@ -408,9 +411,9 @@
                 <i class="bi bi-calendar4-week icon"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>Velit Doloremque</h3>
+                <h3>Membina</h3>
               </a>
-              <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
+              <p>Saya membina karakter, disiplin, dan budaya kerja yang positif demi terciptanya lingkungan sekolah yang aman, nyaman, dan berprestasi.</p>
               <a href="#" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
@@ -424,9 +427,9 @@
                 <i class="bi bi-chat-square-text"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>Dolori Architecto</h3>
+                <h3>Bertanggung Jawab</h3>
               </a>
-              <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
+              <p>Saya memastikan setiap kebijakan dan program berjalan sesuai regulasi serta memberikan dampak nyata bagi peserta didik dan masyarakat.</p>
               <a href="#" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
@@ -527,8 +530,7 @@
 
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
-      <h3 class="sitename">Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3 class="sitename">Fauzi Rachman</h3>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
