--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio</h2>
+        <h2>Portofolio</h2>
       </div><!-- End Section Title -->
 
       <div class="container">
